--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
     <header class="cabeçalho">
         <!--Menu de navegação -->
-        <nav class="container">
+        <nav>
+         <div class="container">
             <img src="src/worldwide 1 (Traced).svg" alt="imagem do globo terreste" class="container__imagem">
             <h1 class="container__titulo">OptimusTech</h1>
             <ul class="navegação">
@@ -35,11 +36,10 @@
 
                 </li>
             </ul>
-
+         </div>
         </nav>
         <!--Login/Cadastro  -->
         <div class="container">
-
             <a href="#" class="container__link">Entrar</a>
             <a href="#" class="container__link cadastrar">Cadastrar</a>
         </div>
