:recycle: refatirando a classe dos botões

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
          </div>
         </nav>
         <!--Login/Cadastro  -->
-        <div class="container">
-            <a href="#" class="container__link">Entrar</a>
-            <a href="#" class="container__link cadastrar">Cadastrar</a>
+        <div class="container botão">
+            <a href="#" class="botão__link">Entrar</a>
+            <a href="#" class="botão__link cadastro">Cadastrar</a>
         </div>
 
     </header>
