:recycle:/:sparkles: refatorando o código e adicionando o cabeçalho

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 </head>
 
 <body>
-    <header class="cabeçalho">
-        <!--Menu de navegação -->
-        <nav>
-         <div class="container">
-            <img src="src/worldwide 1 (Traced).svg" alt="imagem do globo terreste" class="container__imagem">
-            <h1 class="container__titulo">OptimusTech</h1>
-            <ul class="navegação">
+    <!--Menu de navegação -->
+    
+    <nav class="navegação">
+        <img src="src/logo.svg" alt="imagem do globo terreste" class="navegação__imagem">
+        <div class="container">
+            
+            <ul class="navegação-lista">
                 <li class="navegação-item">
                     <a href="#" class="navegação-item__link">Home</a>
                 </li>
@@ -36,14 +36,20 @@
 
                 </li>
             </ul>
-         </div>
-        </nav>
+        </div>
+
         <!--Login/Cadastro  -->
         <div class="container botão">
             <a href="#" class="botão__link">Entrar</a>
             <a href="#" class="botão__link cadastro">Cadastrar</a>
         </div>
-
+    </nav>
+    <!--Cabeçalho -->
+    <header class="cabeçalho">
+        <span>Sobre nós</span>
+        <h1 class="cabeçalho__titulo">Por que somos diferentes?</h1>
+        <p class="cabeçalho__texto"> Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de
+            <br>todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
     </header>
 
 
