:recycle:/:sparkles: refatorando o cabeçalho e adicionando seção de métricas

--- a/index.html
+++ b/index.html
@@ -46,12 +46,31 @@
     </nav>
     <!--Cabeçalho -->
     <header class="cabeçalho">
-        <span>Sobre nós</span>
+        <span class="cabeçalho__span">Sobre nós</span>
         <h1 class="cabeçalho__titulo">Por que somos diferentes?</h1>
         <p class="cabeçalho__texto"> Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de
             <br>todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
     </header>
+    <section class="container__metricas">
+        <div class="metricas__itens">
+            <h2 class="metricas">400+</h2>
+            <span class="metricas__span">Projetos concluídos</span>
+        </div>
+        <div class="metricas__itens">
+            <h2 class="metricas">100+</h2>
+            <span class="metricas__span">Colaboradores</span>
+        </div>
+        <div class="metricas__itens">
+            <h2 class="metricas">20k</h2>
+            <span class="metricas__span">Downloads</span>
+        </div>
+        <div class="metricas__itens">
+            <h2 class="metricas">500+</h2>
+            <span class="metricas__span">Reviews 5 estrelas</span>
+        </div>
 
+
+    </section>
 
 
     <footer></footer>
