:sparkles: Construindo o footer da página.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,17 @@
     </section>
 
 
-    <footer></footer>
+    <footer class="rodapé">
+        <div class="container__rodapé">
+            <h2 class="rodapé__titulo">Acompanhe as nossas oportunidades</h2>
+            <span class="rodapé__texto">Seja o primeiro a saber quando novas vagas serão abertas!</span>
+            <form action="" class="rodapé__formulario">
+                <input type="email" placeholder="Seu-email" class="rodapé__email">
+                <input type="button" value="Cadastrar" class="rodapé__botão">
+            </form>
+            <small class="rodapé__direitos">&copy;2022 OptimusTech. Todos os direitos reservados.</small>
+        </div>
+    </footer>
 </body>
 
 </html>
